update: add the google analytics script

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="manifest" href="../otto/app/manifest.json" crossorigin="use-credentials">
 		<!--<script type="module" src=""></script>-->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ9BZ490XR"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-RQ9BZ490XR');
+		</script>
 	</head>
 
 	<body>
