chore (update): updates the route login based new API

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -27,7 +27,8 @@
 		<!-- TODO: animated background (optional SVG rather than CANVAS). -->
 		<div class="login-box">
 			<h2>Otto Login</h2>
-			<form id="login" method="post" action="https://solver.ottocratesolver.com/start">
+			<!--<form id="login" method="post" action="https://app.ottocratesolver.com/api/v1/login">-->
+			<form>
 				<div class="user-box">
 					<input id="user-name" type="text" name="name" placeholder="" minlength="6" required></input>
 					<label>User Name</label>
