chore (test): test the user login

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -27,14 +27,13 @@
 		<!-- TODO: animated background (optional SVG rather than CANVAS). -->
 		<div class="login-box">
 			<h2>Otto Login</h2>
-			<!--<form id="login" method="post" action="https://app.ottocratesolver.com/api/v1/login">-->
-			<form>
+			<form id="login" method="post" action="/api/v1/login">
 				<div class="user-box">
 					<input id="user-name" type="text" name="name" placeholder="" minlength="6" required></input>
 					<label>User Name</label>
 				</div>
 				<div class="user-box">
-					<input id="passFrase" type="password" name="passFrase" placeholder="" minlength="11" required></input>
+					<input id="passPhrase" type="password" name="passPhrase" placeholder="" minlength="11" required></input>
 					<label>Password</label>
 				</div>
 				<button type="submit" rel="noopener">Get In
