chore (update): changes the user name to "userName"

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -29,7 +29,7 @@
 			<h2>Otto Login</h2>
 			<form id="login" method="post" action="/api/v1/login">
 				<div class="user-box">
-					<input id="user-name" type="text" name="name" placeholder="" minlength="6" required></input>
+					<input id="user-name" type="text" name="userName" placeholder="" minlength="6" required></input>
 					<label>User Name</label>
 				</div>
 				<div class="user-box">
