--- a/public/login/index.html
+++ b/public/login/index.html
@@ -27,7 +27,7 @@
 		<!-- TODO: animated background (optional SVG rather than CANVAS). -->
 		<div class="login-box">
 			<h2>Otto Login</h2>
-			<form id="login" method="post" action="/api/v1/login">
+			<form id="login" method="post" action="https://app.ottocratesolver.com/api/v1/login">
 				<div class="user-box">
 					<input id="user-name" type="text" name="userName" placeholder="" minlength="6" required></input>
 					<label>User Name</label>
