--- a/public/login/index.html
+++ b/public/login/index.html
@@ -27,7 +27,7 @@
 		<!-- TODO: animated background (optional SVG rather than CANVAS). -->
 		<div class="login-box">
 			<h2>Otto Login</h2>
-			<form id="login" method="post" action="https://app.ottocratesolver.com/api/v1/login">
+			<form id="login">
 				<div class="user-box">
 					<input id="user-name" type="text" name="userName" placeholder="" minlength="6" required></input>
 					<label>User Name</label>
@@ -36,7 +36,7 @@
 					<input id="passPhrase" type="password" name="passPhrase" placeholder="" minlength="11" required></input>
 					<label>Password</label>
 				</div>
-				<button type="submit" rel="noopener">Get In
+				<button type="" rel="noopener">Get In
 					<span></span>
 					<span></span>
 					<span></span>
