feat (upate): updates the lock file and remove the call for action

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -36,7 +36,7 @@
 					<input id="passPhrase" type="password" name="passPhrase" placeholder="" minlength="11" required></input>
 					<label>Password</label>
 				</div>
-				<button type="" rel="noopener" onclick="globalThis.fns.loginInto()">Get In
+				<button type="" rel="noopener">Get In
 					<span></span>
 					<span></span>
 					<span></span>
